--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:json-server": "json-server --watch db.json --port 3000",
-    "start:server": "ts-node src/index.ts",
+    "start:server": "nodemon src/index.ts",
     "start": "concurrently \"npm run start:json-server\" \"npm run start:server\""
   },
   "keywords": [],
@@ -20,7 +20,7 @@
     "@types/express": "^5.0.0",
     "@types/node": "^22.7.6",
     "concurrently": "^9.0.1",
-    "ts-node": "^10.9.2",
+    "nodemon": "^3.1.7",
     "typescript": "^5.6.3"
   }
 }
