--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "chalk": "^4.1.2",
     "express": "^4.21.1",
     "json-server": "^1.0.0-beta.3"
   },
